# ORCA-5-1

./: LICENSE.txt  README.md
jma-receipt.r_5_1_branch/: .cvsignore  INSTALL.ja  Makefile.directories.in  Makefile.in  TODO  configure.ac
jma-receipt.r_5_1_branch/cobol/: .cvsignore  Makefile.global.in  Makefile.in
jma-receipt.r_5_1_branch/cobol/api01rv2/: Makefile  ORAPI000R1V2.CBL  ORAPI000R2V2.CBL  ORAPI000R3V2.CBL  ORAPI000R4V2.CBL  ORAPI001R10V2.CBL  ORAPI001R11V2.CBL  ORAPI001R1V2.CBL  ORAPI001R2V2.CBL  ORAPI001R3V2.CBL  ORAPI001R4V2.CBL  ORAPI001R5V2.CBL  ORAPI001R6V2.CBL  ORAPI001R6V2S01.CBL  ORAPI001R7V2.CBL  ORAPI001R8V2.CBL  ORAPI001R9V2.CBL  ORAPI011R1V2.CBL  ORAPI012R1V2.CBL  ORAPI012R2V2.CBL  ORAPI012R3V2.CBL  ORAPI012R4V2.CBL  ORAPI012R5V2.CBL  ORAPI012R6V2.CBL  ORAPI012R7V2.CBL  ORAPI014R1V2.CBL  ORAPI014R2V2.CBL  ORAPI021R1V2.CBL  ORAPI021R2V2.CBL  ORAPI021R3V2.CBL  ORAPI021R4V2.CBL  ORAPI022R1V2.CBL  ORAPI023R1V2.CBL  ORAPI023R2V2.CBL  ORAPI025R1V2.CBL  ORAPI031R1V2.CBL  ORAPI031RC1V2.CBL  ORAPI031RC2V2.CBL  ORAPI031RC2V2S1.CBL  ORAPI031RC2V2S2.CBL  (+12 more)
jma-receipt.r_5_1_branch/cobol/api21/: Makefile  ORAPI021NS1V3.CBL  ORAPI021NS2V3.CBL  ORAPI021NS3V3.CBL  ORAPI021NS4V3.CBL  ORAPI021NS5V3.CBL  ORAPI021S1V2.CBL  ORAPI021S1V3.CBL  ORAPI021S2V2.CBL  ORAPI021S2V3.CBL  ORAPI021S3V2.CBL  ORAPI021S3V3.CBL  ORAPI021S4V3.CBL  ORAPI021S5V3.CBL  ORAPI021S6V3.CBL  ORAPI021S7V3.CBL  ORAPI021SUB1V3.CBL  ORAPI021SUB2V3.CBL  ORAPI021SUB3V3.CBL  ORAPICLAIM21S1V2.CBL  ORAPIV3SUB01.CBL
jma-receipt.r_5_1_branch/cobol/claim/: Makefile  ORCL0010.CBL  ORCL0011.CBL  ORCL0012.CBL  ORCL0012P.CBL  ORCL0020.CBL  ORCL0021.CBL  ORCL0030.CBL  ORCL0031.CBL  ORCL0031BM.CBL  ORCL0031N.CBL  ORCL0040.CBL  ORCL0050.CBL
jma-receipt.r_5_1_branch/cobol/common/: Makefile  ORAPI012RSUB1.CBL  ORCBJOB.CBL  ORCBJOB2.CBL  ORCBJOBLOG.CBL  ORCBT120SUB.CBL  ORCBZ001S.CBL  ORCDBACCT.CBL  ORCDBAPIV3.CBL  ORCDBMAIN.CBL  ORCDBSEIKYU.CBL  ORCDBSPATMP.CBL  ORCDBSYUNOU.CBL  ORCHC01.CBL  ORCHC02.CBL  ORCHC02GELOG.CBL  ORCHC02Q.CBL  ORCHC02QV01.CBL  ORCHC02QV02.CBL  ORCHC02QV03.CBL  ORCHC02QV04.CBL  ORCHC02QV05.CBL  ORCHC02V01.CBL  ORCHC02V02.CBL  ORCHC02V03.CBL  ORCHC02V04.CBL  ORCHC02V05.CBL  ORCHC03.CBL  ORCHC03S02.CBL  ORCHC03SUB.CBL  ORCHC03V02.CBL  ORCHC03V03.CBL  ORCHC03V03A5.CBL  ORCHC03V04.CBL  ORCHC03V05.CBL  ORCHC04.CBL  ORCHC04SUB.CBL  ORCHC30.CBL  ORCHC31.CBL  ORCHC33.CBL  (+434 more)
jma-receipt.r_5_1_branch/cobol/copy/: .cvsignore  API01RV2SCRAREA.INC  API21V3SCRAREA.INC  APPOINTMOD.INC  C01COMMON-SPA  C02.INC  C02SCR-SPA  C03.INC  C04.INC  C05.INC  C06.INC  C09.INC  C10.INC  C11.INC  C12.INC  C50.INC  C501.INC  C50COMMON-SPA  C50ERR.INC  (+2323 more)
jma-receipt.r_5_1_branch/data/: Makefile.in  SKDEF1001.yml  SKDEF1002.yml  SKDEF1003.yml  SKDEF1005.yml  SKDEF1006.yml  SKDEF1007.yml  SKDEF1008.yml  SKDEF1009.yml  SKDEF1010.yml  SKDEF1011.yml  SKDEF1012.yml  SKDEF1013.yml  SKDEF1014.yml  SKDEF1016.yml  SKDEF1017.yml  SKDEF1018.yml  SKDEF1019.yml  SKDEF1020.yml  SKDEF1021.yml  SKDEF1022.yml  SKDEF1026.yml  SKDEF1027.yml  SKDEF1028.yml  SKDEF1030.yml  SKDEF1031.yml  SKDEF1032.yml  SKDEF1033.yml  SKDEF1034.yml  SKDEF1035.yml  SKDEF1036.yml  SKDEF1038.yml  SKDEF1039.yml  SKDEF1040.yml  SKDEF1041.yml  SKDEF1042.yml  SKDEF1043.yml  SKDEF1044.yml  SKDEF1045.yml  SKDEF1046.yml  (+81 more)
jma-receipt.r_5_1_branch/doc/: .cvsignore  CODING_STANDARS.ja  FORM_LIST  Makefile.in  SCREEN_LIST  dbversion  jmaplugin.pub  license.html  orcarc  version
jma-receipt.r_5_1_branch/etc/: .cvsignore  Makefile.in  ORCADC.PARA  das-upload.conf  dbgroup.inc  jma-receipt-crontab.in  jma-receipt.conf.in  jma-receipt.env.in  jppinfo.list.in
jma-receipt.r_5_1_branch/form/: HC02.red  HC02Q.red  HC02QV01.red  HC02QV02.red  HC02QV03.red  HC02QV04.red  HC02QV041.red  HC02QV05.red  HC02V01.red  HC02V02.red  HC02V03.red  HC02V04.red  HC02V041.red  HC02V05.red  HC02ZA4.red  HC02ZA5.red  HC06V01.red  HC14.red  HC26.red  HC27.red  HC501.red  HC502.red  HC503.red  HCG016.red  HCG017.red  HCGS121G.red  HCGS121GV02.red  HCGS121N.red  HCGS121NV02.red  HCGS137G.red  HCGS137N1.red  HCGS137N2.red  HCGS138G1.red  HCGS138G2.red  HCGS138N1.red  HCGS138N2.red  HCGS139G.red  HCGS139GV02.red  HCGS139N.red  HCGS139NV02.red  (+582 more)
jma-receipt.r_5_1_branch/init/: .cvsignore  Makefile.in  orca-db-create.sh.in  orca-db-init.sh.in  orca-db-install.sh.in  orca_dbkanri_orig.dump
jma-receipt.r_5_1_branch/lddef/: .cvsignore  Makefile.in  api01rv2.ld  api21.ld  directory.in  dirmigv51.in  migv51.bd  orca00.ld  orca01.ld  orca02.ld  orca03.ld  orca04.ld  orca06.ld  orca07.ld  orca101.ld  orca102.ld  orca103.ld  orca104.ld  orca107.ld  orca11.ld  orca12.ld  orca13.ld  orca14.ld  orca18.ld  orca19.ld  orca21.ld  orca22.ld  orca23.ld  orca24.ld  orca25.ld  orca29.ld  orca31.ld  orca32.ld  orca33.ld  orca34.ld  orca36.ld  orca41.ld  orca42.ld  orca43.ld  orca44.ld  (+8 more)
jma-receipt.r_5_1_branch/lib/: Makefile.in
jma-receipt.r_5_1_branch/record/: .cvsignore  C02.rec  C03.rec  C04.rec  C05.rec  C06.rec  C09.rec  C10.rec  C11.rec  C12.rec  C50.rec  C501.rec  C50ERR.rec  C50ID1.rec  C99.rec  CERR.rec  CID1.rec  CID2.rec  CID3.rec  CID4.rec  CID5.rec  CID6.rec  D01.rec  D02.rec  D03.rec  D04.rec  D05.rec  D99.rec  DERR.rec  DID1.rec  DID2.rec  E01.rec  E02.rec  EERR.rec  EID1.rec  EID2.rec  F01.rec  FERR.rec  FID1.rec  FID2.rec  (+1074 more)
jma-receipt.r_5_1_branch/screen/: .cvsignore  C02.glade  C03.glade  C04.glade  C05.glade  C06.glade  C09.glade  C10.glade  C11.glade  C12.glade  C50.glade  C501.glade  C50ERR.glade  C50ID1.glade  C99.glade  CERR.glade  CID1.glade  CID2.glade  CID3.glade  CID4.glade  CID5.glade  CID6.glade  D01.glade  D02.glade  D03.glade  D04.glade  D05.glade  D99.glade  DERR.glade  DID1.glade  DID2.glade  E01.glade  E02.glade  EERR.glade  EID1.glade  EID2.glade  F01.glade  FERR.glade  FID1.glade  FID2.glade  (+411 more)
jma-receipt.r_5_1_branch/scripts/: .cvsignore  Makefile.in  execshell.sh.in  execshell_main.sh.in  sample.sh.in
jma-receipt.r_5_1_branch/tools/: .cvsignore  Makefile.in  analyzecbl.rb.in  monitor.sh.in  schema_dump.rb.in
(+5601 files in other folders)
